--- a/.github/workflows/train_and_deploy.yml
+++ b/.github/workflows/train_and_deploy.yml
@@ -31,9 +31,9 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: model-artifacts
-          path: |
-            model.pkl
-            metrics.json
+          path: app/artifacts/
+          if-no-files-found: error
+
 
   deploy:
     needs: train
@@ -47,6 +47,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: model-artifacts
+          path: app/artifacts/
 
       - name: Read and compare metrics (HARD GATE)
         id: compare
@@ -57,7 +58,7 @@ jobs:
           python - <<'EOF'
           import json, sys, os
 
-          with open("metrics.json") as f:
+          with open("app/artifacts/metrics.json") as f:
               m = json.load(f)
 
           cr2 = float(m["r2"])
@@ -76,25 +77,29 @@ jobs:
               sys.exit(1)
 
           with open(os.environ["GITHUB_OUTPUT"], "a") as f:
-              f.write(f"deploy=true\n")
+              f.write("deploy=true\n")
               f.write(f"current_r2={cr2}\n")
               f.write(f"current_mse={cmse}\n")
           EOF
+
 
       - name: Docker login
         if: steps.compare.outputs.deploy == 'true'
         run: |
           echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
+
       - name: Build Docker image
         if: steps.compare.outputs.deploy == 'true'
         run: |
           docker build -t ${{ secrets.DOCKER_USERNAME }}/wine-inference:latest .
 
+
       - name: Push Docker image
         if: steps.compare.outputs.deploy == 'true'
         run: |
           docker push ${{ secrets.DOCKER_USERNAME }}/wine-inference:latest
+
 
       - name: Update best metrics
         if: steps.compare.outputs.deploy == 'true'
